# live555_andrdoid_test

./: .gitignore  README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/mq/qrtspclient/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: RtspClient.cpp  RtspClient.h
app/src/main/cpp/jni/include/UsageEnvironment/: Boolean.hh
app/src/main/cpp/jni/include/liveMedia/: FramedSource.hh  TLSState.hh
app/src/main/java/com/mq/qrtspclient/: FrameCallback.kt  H264Decoder.kt  Logger.kt  MainActivity.kt  PpsSps.java  PpsSpsHelper.kt  RTSPClient.kt
app/src/main/java/com/mq/qrtspclient/ui/theme/: Color.kt  Dimmen.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/mq/qrtspclient/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
